--- a/dbebr_sqflite/pubspec.yaml
+++ b/dbebr_sqflite/pubspec.yaml
@@ -1,5 +1,5 @@
-name: dbebr_mysql1
-description: DBEBr Framwork for Dart/Flutter (MySQL - package mysql1)
+name: dbebr_sqflite
+description: DBEBr Framwork for Dart/Flutter (SQLite - package sqflite)
 version: 0.0.1
 repository: https://github.com/isaquepinheiro
 publish_to: 'none'
@@ -8,10 +8,12 @@ environment:
   sdk: '>=2.19.5 <3.0.0'
 
 dependencies:
+  flutter:
+    sdk: flutter
   dbebr_core:
     path: ../dbebr_core
-  meta: ^1.9.1
-  mysql1: ^0.20.0
+  sqflite: ^2.2.6
+  meta: ^1.8.0
 
 dev_dependencies:
   lints: ^2.0.0
